# ppteval

./: .gitignore  ATTRIBUTION.md  CODE_OF_CONDUCT.md  Gemfile  Gemfile.local  LOCAL_SETUP.md  README.md  SETUP.md  _config.yml  faq.html  generate_favicon.py  hydrate_data.py  index.html  infrastructure.html  leaderboard.html  license.html  pyproject.toml  setup-local.ps1  statistics.html  task-explorer.html
.github/workflows/: jekyll.yml  lint.yml  pages.yml  test.yml
_data/: authors.yml  benchmark.yml  navigation.yml
_includes/: footer.html  head.html  header.html
_layouts/: default.html  home.html  page.html
_sass/: _base.scss  _components.scss  _layout.scss  main.scss
_sass/pages/: _faq.scss  _home.scss
assets/images/: README.md
assets/js/: main.js  task-explorer.js
claude-workspace/: CLAUDE.md
ppteval/: README.md  __init__.py  config.py  orchestrator.py  run_benchmark.py
ppteval/action_spaces/: __init__.py  claude.py  cua.py  gemini.py  gpt5x.py  opencua.py  opencua_prompts.py  opencua_utils.py  qwen3vl.py  screenenv.py  uitars.py
ppteval/agents/: __init__.py  claude_agent.py  claude_task_proposer.py  code_agent.py  cua_agent.py  gemini_agent.py  gpt5x_agent.py  opencua_agent.py  qwen3vl_agent.py  uitars_agent.py  uitars_vllm_agent.py
ppteval/configs/: claude-4-sonnet.yaml  claude-code-opus-4-5.yaml  claude-code-opus-4-7.yaml  claude-code.yaml  claude-opus-4-5.yaml  claude-opus-4-7.yaml  claude-opus-4-8.yaml  codex-cli.yaml  copilot-cli.yaml  gemini.yaml  gpt54.yaml  gpt55.yaml  opencua-32b.yaml  (+8 more)
proposed_tasks/: 3.proposed_tasks.json  4._Pre-Colonial_Filipino_Culture.proposed_tasks.json  Accounting Equation.proposed_tasks.json  Aircraft_surface.proposed_tasks.json  Drummond_Troilo-Unseen Aspects of Sea Level Rise (final).proposed_tasks.json  ENGLISH GRAMMER.proposed_tasks.json  Ear Barotrauma_ Causes, Symptoms and Treatment.proposed_tasks.json  HSC Careers and Expo FINAL COM MOD.proposed_tasks.json  Jean-Nicolas-Louis Durand.proposed_tasks.json  Obesity.proposed_tasks.json  PET.proposed_tasks.json  PLAN_Dudley_-Economic-Development_062016_FINAL_web.proposed_tasks.json  PLAN_Dudley_-Transportation-Workshop_4-19-2016.proposed_tasks.json  Qatargas GS new Customer Service.proposed_tasks.json  Revisiting Classical  Social Experiments [Autosaved].proposed_tasks.json  Stephen-Curry-LJMU-1.proposed_tasks.json  Time and Meetings management.proposed_tasks.json  Worms.proposed_tasks.json  application+layer+slide.pptx.proposed_tasks.json  pediatic glasses when to prescribe1.proposed_tasks.json  presentation-tips.proposed_tasks.json
task_registry/: tasks.json
(+168 files in other folders)
